# PDAL

cmake/modules/: FindZ5.cmake
pdal/: Dimension.json
plugins/: CMakeLists.txt
plugins/z5/: CMakeLists.txt
plugins/z5/io/: Z5Reader.cpp  Z5Reader.hpp
plugins/z5/test/: Config.hpp.in  Z5ReaderTest.cpp
plugins/z5/test/data/: make-test-data.py
scripts/conda/: osx.sh
test/data/z5/: make-test-data.py
test/data/z5/1.2-with-color-zstd.zarr/las/1.2-with-color/: .zarray  0
test/data/z5/bad.zarr/: 0  1  10  100  101  102  103  104  105  106  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  (+67 more)
test/unit/io/: ObjReaderTest.cpp
